# VEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Compile.bat  README.md  ShaderCompile.bat  main.cpp  vert.spv
Shaders/: FragmentShader.frag  VertexShader.vert
VEngine/: CMakeLists.txt
VEngine/Src/: Application.cpp  Application.h  Core.h  Log.h  Maths.h  Timestep.h  VEngine.h  VePCH.h
VEngine/Src/Core/: CMakeLists.txt
VEngine/Src/Events/: Events.h
VEngine/Src/Input/: Input.cpp  Input.h  InputCodes.h
VEngine/Src/Layers/: Layer.h  LayerStack.cpp  LayerStack.h
VEngine/Src/Profiling/: Timer.h
VEngine/Src/Rendering/: Buffers.h  CMakeLists.txt  Renderer.cpp  Renderer.h  RendererAPI.h  ResourceFactory.h  Shaders.h
VEngine/Src/Rendering/ModernVulkan/: VeVPCH.h  VulkanContext.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanRenderApi.cpp  VulkanRenderApi.h  VulkanRenderData.h  VulkanResourceFactory.cpp  VulkanResourceFactory.h  VulkanUtils.h
VEngine/Src/Rendering/Vulkan/: CMakeLists.txt  VulkanBuffers.cpp  VulkanBuffers.h  VulkanContext.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShaders.h  VulkanSwapChain.h
VEngine/Src/UUID/: UUID.cpp  UUID.h
VEngine/Src/Window/: Window.cpp  Window.h
